Fix text being too large in math-mode

--- a/bin/template/content/styles/shared.scss
+++ b/bin/template/content/styles/shared.scss
@@ -96,3 +96,11 @@ ol.index-entries {
     margin-left: 1em;
   }
 }
+
+.katex-html {
+  font-size: 0.75em;
+}
+
+.katex {
+  line-height: 1 !important;
+}
